SEC-3029: Add springSnapshotTests
Test against Spring Framework's latest Snapshots